# sensor-monitoring-app

./: .gitignore  README.md
deploy/application/: graphql.yaml  init.sql  server.yaml
deploy/infra/database/: exporter.yaml  timescaledb.yaml
deploy/infra/helm/: grafana-values.yaml  loki-values.yaml  prometheus-stack-values.yaml  promtail-values.yaml
deploy/infra/ingress/: grafana.yaml  graphql.yaml  server.yaml
docs/: INSTALL_MONITORING.md
projects/sensor_graphql/: Dockerfile  index.js  package.json  pnpm-lock.yaml  push_and_restart.sh
projects/sensor_graphql/plugins/: omitMutations.js  timeScaleAggregates.js
projects/sensor_server/: Dockerfile  push_and_restart.sh  pyproject.toml
projects/sensor_server/src/: exceptions.py
projects/sensor_server/src/database/: base.py  container.py  repository.py  session_factory.py  settings.py
projects/sensor_server/src/facility/: container.py  domains.py  entities.py  repository.py  service.py
projects/sensor_server/src/sensor/: container.py  domains.py  entities.py  repository.py  service.py
projects/sensor_server/tests/: conftest.py
projects/sensor_server/tests/facility/: test_service.py
projects/sensor_server/tests/load_test/: locustfile.py
projects/sensor_server/tests/service/: test_service.py
projects/sensor_server/tests/webapp/: conftest.py  test_sensor.py
projects/sensor_server/webapp/: app.py  container.py  dependency.py  dtos.py  logger.py  metrics.py
projects/sensor_server/webapp/routers/: sensor.py
