[project]
name = "sensor-server"
version = "0.1.0"
description = ""
authors = [
    {name = "craftsangjae",email = "craftsangjae@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "dependency-injector (>=4.45.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "prometheus-fastapi-instrumentator (>=7.0.2,<8.0.0)",
    "opentelemetry-api (>=1.30.0,<2.0.0)",
    "opentelemetry-sdk (>=1.30.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "opentelemetry-instrumentation-logging (>=0.51b0,<0.52)",
    "opentelemetry-instrumentation-asyncpg (>=0.51b0,<0.52)",
    "httpx (>=0.28.1,<0.29.0)"    
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
testcontainers = "^4.9.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
locust = "^2.32.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [
    {include = "src", from = "."},
    {include = "webapp", from = "."}
]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]  # 테스트 디렉토리 명시
pythonpath = "."       # 프로젝트 루트를 파이썬 패스에 추가

[tool.coverage.run]
omit = ["tests/*", "src/database/*"]
source = ["src", "webapp"]